# shared_claude_docs

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CLAUDE.md.backup  GRANGER_COMPLIANCE_ASSESSMENT.md  GRANGER_COMPLIANCE_CORRECTED.md  GRANGER_ECOSYSTEM_COMPLIANCE_SUMMARY.md  GRANGER_HUB_COMPLIANCE_ASSESSMENT.md  MIGRATION_ACTION_SUMMARY.md  PROJECT_CLEANUP_COMPLETE.md  README.md  UNSLOTH_TO_FINE_TUNING_MIGRATION_PLAN.md  cleanup_project_structure.py  execute_unsloth_migration.sh  granger_compliance_checker.py  granger_compliance_dashboard.html  granger_compliance_dashboard.py  granger_compliance_report.json  granger_modules.pth  pyproject.toml  pyproject.toml.backup  pytest.ini  rename_github_repo.sh  rename_github_repo_fixed.sh  setup.sh  setup_venv.sh
api_gateway/: README.md  test_task_33.py
archive/: README.md
bug_hunter_automation/: run_all_bug_tests.sh
bug_hunter_reports/: BUG_HUNTER_SUMMARY.md  CRITICAL_BUGS_ACTION_PLAN.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_PRIORITY_PLAN.md  task_002_findings.md  task_003_findings.md
bug_hunter_tests/: bug_hunter_automation_batch.py  task_002_sparta_cve.py  task_002_sparta_cve_direct.py  task_003_arxiv_mcp.py  task_003_arxiv_quick.py  task_004_arangodb.py  task_005_llm_call_validation.py  task_006_module_communicator.py  task_007_marker_edge_cases.py  task_008_youtube_reliability.py  task_009_unsloth_training.py  task_010_test_reporter.py  task_011_hub_communication.py  task_012_sparta_marker.py  task_013_marker_arangodb.py  task_014_arangodb_unsloth.py  task_015_youtube_marker.py  task_016_arxiv_arangodb.py  task_017_llm_module_comm.py  task_018_hub_reporter.py  task_020_marker_unsloth.py  task_021_youtube_arangodb.py  task_022_arxiv_marker.py  task_023_llm_hub.py  task_024_reporter_hub.py
cache_data/: cache.db-shm  cache.db-wal
cleanup_reports/: 20250529-115057-arangodb.json  20250529-115057-arxiv-mcp-server.json  20250529-115057-claude-module-communicator.json  20250529-115057-claude-test-reporter.json  20250529-115057-claude_max_proxy.json  20250529-115057-marker-ground-truth.json  20250529-115057-marker.json  20250529-115057-sparta.json  20250529-115057-unsloth_wip.json  20250529-115057-youtube_transcripts.json  comprehensive_report_20250529-115057.md  summary_20250529-115057.txt
docs/: 000_INDEX.md  GRANGER_PROJECTS.md  MERMAID.md  MIGRATION_REPORT_2025_01_06.md  PROJECTS.md  README.md  REORGANIZATION_COMPLETE.md
granger_verification_reports/: test_execution_fix_summary.json  test_execution_status.md
guides/: 2025_SVG_GEIST_STYLE_GUIDE.md  DEPENDENCY_QUICK_REFERENCE.md  DEVELOPER_GUIDE.md  DEVELOPER_SETUP.md  GRANGER_COMMANDS_ANALYSIS.md  GRANGER_HUB_INTEGRATION_GUIDE.md  GRANGER_RAPID_IMPLEMENTATION_FRAMEWORK.md  GRANGER_SLASH_COMMANDS_GUIDE.md  GRANGER_TEST_LESSONS_SUMMARY.md  LESSONS_LEARNED_FOR_GUIDES.md  TASK_LIST_TEMPLATE_GUIDE_V2.md  TEST_VERIFICATION_TEMPLATE_GUIDE.md
module_specific_fixes/: arangodb_fixes.py  hub_fixes.py  marker_fixes.py  sparta_fixes.py  unsloth_fixes.py  youtube_fixes.py
project_interactions/: 001_AI_Feedback_Actions.json  001_AI_Feedback_Synthesis.md  001_Bug_Hunt_Report.json  001_Bug_Hunt_Report.md  002_Bug_Hunt_Report.json  002_Bug_Hunt_Report.md  002_Gemini_Feedback.md  003_Bug_Hunt_Report.json  003_Bug_Hunt_Report.md  003_GRANGER_BUG_HUNT_FINAL_SUMMARY.md  004_Bug_Hunt_Report.md  005_FINAL_BUG_HUNT_ASSESSMENT.md  006_BUG_HUNTER_SCENARIOS_ENHANCED.md  007_AI_Graded_Bug_Hunt_20250608_114359.md  008_GRANGER_SCENARIOS_COMPLETE_20250608_114643.md  009_FINAL_BUG_HUNT_COMPLETE_20250608_115421.md  009_FINAL_BUG_HUNT_COMPLETE_20250608_120659.md  010_BUG_HUNT_JOURNEY_COMPLETE.md  010_REAL_WORLD_BUG_HUNT_20250608_121026.md  011_FINAL_SECURITY_ASSESSMENT_20250608_121217.md  COMPREHENSIVE_INTERACTION_TEST_FRAMEWORK.md  FINAL_SKEPTICAL_VERIFICATION.md  GEMINI_INTERACTION_TEST_DESIGN.md  GRANGER_ANTIPATTERN_SUMMARY.md  GRANGER_BUGS_FOUND_SUMMARY.md  GRANGER_BUG_FIXES_FINAL_SUMMARY.md  GRANGER_BUG_FIX_SUMMARY.md  GRANGER_BUG_HUNTER_SCENARIOS.md  GRANGER_BUG_HUNTER_SCENARIOS_COMPLETE.md  GRANGER_BUG_HUNTING_PLAYBOOK.md  GRANGER_BUG_HUNT_FINAL_SUMMARY.md  GRANGER_BUG_REPORT_001.md  (+252 more)
(+1749 files in other folders)
